--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="c">
                 <div class="line"></div>
                 <div class="div500">
-                    <p class="sum">Summer Collection</p>
+                    <p class="sum"><span>Summer Collection</span></p>
                 </div>
                 <div class="line"></div>
             </div>   
